--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                 <!--active repo's and favorite-->
                   <h2>repositories💻</h2>
                   <p><a href="https://github.com/John220099/Anti-revoke-blacklist">antirevoke-dns</a></p>
-                  <p><a href='https://github.com/John220099/john220099-stuff'>john220099-stuff</a></p>
+                  <p><a href="https://github.com/John220099/john220099-stuff">john220099-stuff</a></p>
+                  <p><a href="https://github.com/John220099/Bedrock-Clients">bedrock-clients</a></p>
+                  <p><a href="https://github.com/John220099/Java-clients">java-clients</a></p>
                  </section>
             <section>
             <!--socials github / youtube-->
