--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- redid parts and removed usles code.--> 
+
 <head>
    <meta charset="UTF-8">
    
@@ -8,7 +8,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
    <!--keywords for search-->
-   <meta name="keywords" content="john220099, john2009, john2009_, Anti revoke + blacklist, JHACK">
+   <meta name="keywords" content="john220099, Anti revoke + blacklist, JHACK">
    
    <!--website description-->
    <meta name="description" content="portfolio or an about me website made by john220099">
@@ -18,13 +18,16 @@
    
    <!--search tags-->
    <meta itemprop="name" content="john220099">
-   <meta itemprop="description" content="1john220099's portfolio">
+   <meta itemprop="description" content="john220099's portfolio">
    
    <!--displays websites title-->
    <title>welcome to john220099s portfolio</title>
    
    <!--website css style-->
    <link rel="stylesheet" href="Styles.css">
+  
+   <!--website icon-->
+   <link rel="icon" type="image/png" href="favicon.png">
 </head>
   <body>
     <header>
@@ -33,36 +36,27 @@
           <h1>Welcome to John220099 stuff</h1>
         <ul>  
           </nav>
-             <section>
              <!--about-->
                <h2>about me</h2>
                <p>Hi, I’m @John220099 👋🏻</p>
                <p>i make/code stuff🛠️</p> 
                <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
                <p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p>
-             </section>
-                <section>
-                <!--active repo's and favorite-->
                   <h2>repositories💻</h2>
                   <p><a href="https://github.com/John220099/Anti-revoke-blacklist">antirevoke-dns</a></p>
                   <p><a href="https://github.com/John220099/john220099-stuff">john220099-stuff</a></p>
                   <p><a href="https://github.com/John220099/Bedrock-Clients">bedrock-clients</a></p>
                   <p><a href="https://github.com/John220099/Java-clients">java-clients</a></p>
-                 </section>
-            <section>
             <!--socials github / youtube-->
               <h2>socials📱</h2>
               <p><a href="https://github.com/John220099">github</a></p>
               </p><a href="https://youtube.com/@john2009_?si=o_Ir5jyeSwx2duCN">youtube</a></p>
-            </section>
-        <section>
         <!--shows a line-->
           <nav>
          </nav> 
-    </section>  
        <footer>
        <!--footer-->
-         <h4>&copy; 2024 My Website. All rights reserved under github.</h4>
+         <h4>&copy; 2025 My Website. All rights reserved under github.</h4>
        </footer>
    </body>
 </html> 
