--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<!-- redid parts and removed usles code.--> 
 <head>
    <meta charset="UTF-8">
    
@@ -8,7 +8,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
    <!--keywords for search-->
-   <meta name="keywords" content="john220099, Anti revoke + blacklist, JHACK">
+   <meta name="keywords" content="john220099, john2009, john2009_, Anti revoke + blacklist, JHACK">
    
    <!--website description-->
    <meta name="description" content="portfolio or an about me website made by john220099">
@@ -18,16 +18,13 @@
    
    <!--search tags-->
    <meta itemprop="name" content="john220099">
-   <meta itemprop="description" content="john220099's portfolio">
+   <meta itemprop="description" content="1john220099's portfolio">
    
    <!--displays websites title-->
    <title>welcome to john220099s portfolio</title>
    
    <!--website css style-->
    <link rel="stylesheet" href="Styles.css">
-  
-   <!--website icon-->
-   <link rel="icon" type="image/png" href="favicon.png">
 </head>
   <body>
     <header>
@@ -36,21 +33,36 @@
           <h1>Welcome to John220099 stuff</h1>
         <ul>  
           </nav>
-             <!--about-->
+             	<!--about-->
                <h2>about me</h2>
                <p>Hi, I’m @John220099 👋🏻</p>
                <p>i make/code stuff🛠️</p> 
                <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
                <p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p>
+                <!--active repo's and favorite-->
                   <h2>repositories💻</h2>
-                  <p><a href="https://github.com/John220099/Anti-revoke-blacklist">antirevoke-dns</a></p>
-                  <p><a href="https://github.com/John220099/john220099-stuff">john220099-stuff</a></p>
-                  <p><a href="https://github.com/John220099/Bedrock-Clients">bedrock-clients</a></p>
-                  <p><a href="https://github.com/John220099/Java-clients">java-clients</a></p>
+                  <p><a href="https://github.com/John220099/Anti-revoke-blacklist" target="_blank">antirevoke-dns</a></p>
+                  <p><a href="https://github.com/John220099/john220099-stuff" target="_blank">john220099-stuff</a></p>
+                  <p><a href="https://github.com/John220099/Bedrock-Clients" target="_blank">bedrock-clients</a></p>
+                  <p><a href="https://github.com/John220099/Java-clients" target="_bank">java-clients</a></p>
             <!--socials github / youtube-->
               <h2>socials📱</h2>
-              <p><a href="https://github.com/John220099">github</a></p>
-              </p><a href="https://youtube.com/@john2009_?si=o_Ir5jyeSwx2duCN">youtube</a></p>
+              <!--the link that will be opened if you click the image-->
+              <div class="center">
+              	<div class="github">
+              		<a href="https://github.com/John220099" target="_blank" title="Will Redirect you to my github profile.">
+                  	<!--shows an image-->
+  						<img src="assets/github.png"/>
+			  			</a>
+                      </div>
+				  <div class="youtube">
+                  	<!--the link that will be opened if you click the image-->
+             	 		<a href="https://youtube.com/@john2009_?si=o_Ir5jyeSwx2duCN" target="_blank" title="Will Redirect you to my YT.">
+                  	<!--shows an image-->
+                    <img src="assets/youTube.png"/>
+                   </a>
+                 </div>
+               </div>
         <!--shows a line-->
           <nav>
          </nav> 
