--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
    
    <!--website css style-->
    <link rel="stylesheet" href="Styles.css">
+   
+	<!--website icon--> 
+	<link rel="icon" type="image/png" href="favicon.png">
 </head>
   <body>
     <header>
@@ -38,7 +41,7 @@
                <p>Hi, I’m @John220099 👋🏻</p>
                <p>i make/code stuff🛠️</p> 
                <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
-               <p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p>
+               <div class="code"><p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p></div>
                 <!--active repo's and favorite-->
                   <h2>repositories💻</h2>
                   <p><a href="https://github.com/John220099/Anti-revoke-blacklist" target="_blank">antirevoke-dns</a></p>
@@ -48,7 +51,6 @@
             <!--socials github / youtube-->
               <h2>socials📱</h2>
               <!--the link that will be opened if you click the image-->
-              <div class="center">
               	<div class="github">
               		<a href="https://github.com/John220099" target="_blank" title="Will Redirect you to my github profile.">
                   	<!--shows an image-->
@@ -59,10 +61,9 @@
                   	<!--the link that will be opened if you click the image-->
              	 		<a href="https://youtube.com/@john2009_?si=o_Ir5jyeSwx2duCN" target="_blank" title="Will Redirect you to my YT.">
                   	<!--shows an image-->
-                    <img src="assets/youTube.png"/>
+                    <img src="assets/youtube.png"/>
                    </a>
                  </div>
-               </div>
         <!--shows a line-->
           <nav>
          </nav> 
