--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
    
    <!--search tags-->
    <meta itemprop="name" content="john220099">
-   <meta itemprop="description" content="1john220099's portfolio">
+   <meta itemprop="description" content="john220099's portfolio">
    
    <!--displays websites title-->
    <title>welcome to john220099s portfolio</title>
