--- a/index.html
+++ b/index.html
@@ -23,51 +23,38 @@
    <!--displays websites title-->
    <title>welcome to john220099s portfolio</title>
    
-   <!--website css style-->
+   <!--style-->
    <link rel="stylesheet" href="Styles.css">
+
+   <!--script-->
+   <script src="script.js"></script>
    
 	<!--website icon--> 
-	<link rel="icon" type="image/png" href="favicon.png">
+	<link rel="icon" type="image/png" href="assets/favicon.png">
 </head>
   <body>
-      <nav>
+    <nav>
         <ul>
-          <h1>Welcome to John220099 stuff</h1>
+          <h1>John220099 stuff</h1>
         <ul>  
           </nav>
-             	<!--about-->
-               <h2>about me</h2>
-               <p>Hi, I’m @John220099 👋🏻</p>
-               <p>i make/code stuff🛠️</p> 
-               <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
-               <div class="code"><p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p></div>
-                <!--active repo's and favorite-->
-                  <h2>repositories💻</h2>
-                  <p><a href="https://github.com/John220099/Anti-revoke-blacklist" target="_blank">antirevoke-dns</a></p>
-                  <p><a href="https://github.com/John220099/john220099-stuff" target="_blank">john220099-stuff</a></p>
-                  <p><a href="https://github.com/John220099/Bedrock-Clients" target="_blank">bedrock-clients</a></p>
-                  <p><a href="https://github.com/John220099/Java-clients" target="_bank">java-clients</a></p>
-            <!--socials github / youtube-->
-              <h2>socials📱</h2>
-              <!--the link that will be opened if you click the image-->
-              	<div class="github">
-              		<a href="https://github.com/John220099" target="_blank" title="Will Redirect you to my github profile.">
-                  	<!--shows an image-->
-  						<img src="assets/github.png"/>
-			  			</a>
-                      </div>
+            <h2>about me</h2>
+            <p>Hi, I’m @John220099 👋🏻</p>
+            <p>i make/code stuff🛠️</p> 
+            <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
+            <div class="code"><p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p></div>          
+          <h2>socials📱</h2>
+          <div class="github">
+            <a href="https://github.com/John220099" target="_blank" title="Will Redirect you to my github profile.">
+  			    <img src="assets/github.png"/>
+			  	  </a>
+          </div>
 				  <div class="youtube">
-                  	<!--the link that will be opened if you click the image-->
-             	 		<a href="https://youtube.com/@john2009_?si=o_Ir5jyeSwx2duCN" target="_blank" title="Will Redirect you to my YT.">
-                  	<!--shows an image-->
-                    <img src="assets/youtube.png"/>
-                   </a>
-                 </div>
-        <!--shows a line-->
-          <nav>
-         </nav> 
-       <footer>
-       <!--footer-->
-         <h4>&copy; 2025 My Website. All rights reserved under github.</h4>
-       </footer>
-</body>
+            <a href="https://www.youtube.com/@john22009" target="_blank" title="Will Redirect you to my YT.">
+          <img src="assets/youtube.png"/>
+        </a>
+      </div>
+      <div class="line">
+    </div>
+  </body>
+</html>
