--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- redid parts and removed usles code.--> 
+
 <head>
+  <!--text stuff-->
    <meta charset="UTF-8">
    
    <!--sync webpage size to device screen-->
@@ -21,7 +22,7 @@
    <meta itemprop="description" content="john220099's portfolio">
    
    <!--displays websites title-->
-   <title>welcome to john220099s portfolio</title>
+   <title>john220099's stuff</title>
    
    <!--style-->
    <link rel="stylesheet" href="Styles.css">
@@ -35,13 +36,13 @@
   <body>
     <nav>
         <ul>
-          <h1>John220099 stuff</h1>
+          <h1>John220099's stuff</h1>
         <ul>  
           </nav>
             <h2>about me</h2>
             <p>Hi, I’m @John220099 👋🏻</p>
             <p>i make/code stuff🛠️</p> 
-            <p>I’m currently learning python, c++ ,kotlin and html 📒</p>
+            <p>I’m currently learning python, java, kotlin and html 📒</p>
             <div class="code"><p><img align="center" src="https://github-readme-stats.vercel.app/api/top-langs?username=john220099&show_icons=true&locale=en&layout=compact" alt="john220099" /></p></div>          
           <h2>socials📱</h2>
           <div class="github">
@@ -54,6 +55,9 @@
           <img src="assets/youtube.png"/>
         </a>
       </div>
+        <ul>
+          <li><a href="https://horizonsense.github.io/">HorizonSense</a></li>
+        </ul>
       <div class="line">
     </div>
   </body>
